--- a/app/index.html
+++ b/app/index.html
@@ -299,6 +299,14 @@
         text-align: center;
       }
 
+      
+      .race-selection {
+        display: flex;
+        justify-content: center; /* Horizontal center */
+        align-items: center;     /* Vertical center (if parent has height) */
+      }
+
+
       .progress-container {
         margin: 0 auto;
       }
@@ -314,7 +322,6 @@
 
     <div class="calculator-card">
       <div class="input-section">
-        <label class="input-label" for="hasteRating">Haste Rating</label>
         <div class="input-wrapper">
           <input 
             type="number" 
@@ -493,3 +500,4 @@
   </script>
 </body>
 </html>
+
