--- a/app/index.html
+++ b/app/index.html
@@ -520,48 +520,249 @@
         padding: 0 1rem;
       }
 
+      .header {
+        margin-bottom: 3rem;
+      }
+
       .header h1 {
-        font-size: 2.8rem;
+        font-size: 2.5rem;
+        line-height: 1.2;
       }
 
       .header p {
-        font-size: 1.1rem;
+        font-size: 1rem;
+        line-height: 1.5;
       }
 
       .calculator-card {
-        padding: 2.5rem;
-        border-radius: 24px;
+        padding: 2rem;
+        border-radius: 20px;
+      }
+
+      .input-section {
+        margin-bottom: 3rem;
+      }
+
+      .input-toggle {
+        margin-bottom: 2rem;
+      }
+
+      .toggle-buttons {
+        width: 100%;
+        max-width: 300px;
+        padding: 4px;
+      }
+
+      .toggle-btn {
+        padding: 0.8rem 1.2rem;
+        font-size: 0.9rem;
+      }
+
+      .input-label {
+        font-size: 1.2rem;
+        margin-bottom: 1rem;
+      }
+
+      .haste-input {
+        padding: 1.2rem 1.5rem;
+        font-size: 1.4rem;
+      }
+
+      .race-selection {
+        margin-top: 2rem;
+      }
+
+      .race-toggle {
+        padding: 1.2rem 1.5rem;
+        gap: 1rem;
+        border-radius: 12px;
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+      }
+
+      .race-switch {
+        width: 50px;
+        height: 28px;
+      }
+
+      .race-switch::after {
+        width: 22px;
+        height: 22px;
+      }
+
+      .race-checkbox:checked + .race-switch::after {
+        transform: translateX(22px);
+      }
+
+      .race-text {
+        font-size: 1rem;
+        line-height: 1.3;
+      }
+
+      .result-display {
+        padding: 2rem 1.5rem;
+        margin-bottom: 3rem;
+      }
+
+      .result-label {
+        font-size: 1rem;
+        margin-bottom: 0.8rem;
+      }
+
+      .result-value {
+        font-size: 2.8rem;
+        line-height: 1.1;
+        margin-bottom: 0.8rem;
+      }
+
+      .conversion-text {
+        font-size: 1rem;
+      }
+
+      .gcd-warning {
+        padding: 1rem 1.5rem;
+        font-size: 0.95rem;
+        margin-top: 1rem;
+        border-radius: 12px;
+      }
+
+      .table-header {
+        padding: 2rem 1.5rem;
+      }
+
+      .table-title {
+        font-size: 1.6rem;
       }
 
       .spell-row {
         grid-template-columns: 1fr;
-        gap: 2rem;
+        gap: 1.5rem;
         text-align: center;
-        padding: 2rem;
+        padding: 1.5rem;
+      }
+
+      .spell-info {
+        justify-content: center;
+        gap: 1rem;
+      }
+
+      .spell-icon {
+        width: 48px;
+        height: 48px;
+        border-radius: 12px;
+      }
+
+      .spell-name {
+        font-size: 1.1rem;
       }
 
       .breakpoint-info {
         text-align: center;
         align-items: center;
+        gap: 0.8rem;
       }
 
       .progress-container {
         margin: 0 auto;
-        width: 180px;
-      }
-
-      .toggle-buttons {
-        width: 100%;
-        max-width: 350px;
+        width: 160px;
+        height: 10px;
       }
 
       .breakpoint-text {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
+        line-height: 1.3;
       }
 
       .ticks-badge {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         padding: 0.8rem 1.5rem;
+        min-width: 100px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .container {
+        padding: 0 0.75rem;
+      }
+
+      .header h1 {
+        font-size: 2rem;
+      }
+
+      .calculator-card {
+        padding: 1.5rem;
+        margin-bottom: 2rem;
+      }
+
+      .toggle-btn {
+        padding: 0.7rem 1rem;
+        font-size: 0.85rem;
+      }
+
+      .haste-input {
+        padding: 1rem 1.2rem;
+        font-size: 1.2rem;
+      }
+
+      .race-toggle {
+        padding: 1rem;
+        flex-direction: column;
+        gap: 0.8rem;
+      }
+
+      .race-text {
+        font-size: 0.9rem;
+        text-align: center;
+      }
+
+      .result-display {
+        padding: 1.5rem 1rem;
+      }
+
+      .result-value {
+        font-size: 2.2rem;
+      }
+
+      .table-header {
+        padding: 1.5rem 1rem;
+      }
+
+      .table-title {
+        font-size: 1.4rem;
+      }
+
+      .spell-row {
+        padding: 1.2rem;
+        gap: 1.2rem;
+      }
+
+      .spell-icon {
+        width: 40px;
+        height: 40px;
+      }
+
+      .spell-name {
+        font-size: 1rem;
+      }
+
+      .breakpoint-text {
+        font-size: 1rem;
+        word-break: break-word;
+      }
+
+      .progress-container {
+        width: 140px;
+      }
+
+      .ticks-badge {
+        font-size: 1rem;
+        padding: 0.7rem 1.2rem;
+      }
+
+      .gcd-warning {
+        padding: 0.8rem 1rem;
+        font-size: 0.9rem;
       }
     }
   </style>
