--- a/app/index.html
+++ b/app/index.html
@@ -800,7 +800,7 @@
           <label class="race-toggle">
             <input type="checkbox" id="goblinRacial" class="race-checkbox">
             <span class="race-switch"></span>
-            <span class="race-text">Goblin (Time is Money: +1% haste)</span>
+            <span class="race-text">Goblin (+1% haste)</span>
           </label>
         </div>
       </div>
@@ -1011,3 +1011,4 @@
   </script>
 </body>
 </html>
+
