--- a/app/index.html
+++ b/app/index.html
@@ -747,6 +747,12 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <div class="header">
+      <h1>Shadow Priest Haste Calculator</h1>
+      <p>Optimize your DoT breakpoints and maximize your damage potential in Mists of Pandaria Classic</p>
+    </div>
+
     <div class="calculator-card">
       <div class="input-section">
         <div class="input-toggle">
@@ -984,4 +990,3 @@
   </script>
 </body>
 </html>
-
