--- a/app/google.html
+++ b/app/google.html
@@ -794,7 +794,7 @@
           hasteInput.type = 'number';
           label.textContent = 'Enter your haste rating';
         } else {
-          hasteInput.placeholder = '0.00';
+          hasteInput.placeholder = '0.00%';
           hasteInput.removeAttribute('max'); // Remove max to allow formatting
           hasteInput.removeAttribute('step');
           hasteInput.type = 'text'; // Change to text for custom formatting
