--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shadow Priest Top 100 – MoP Classic</title>
+  <title>Shadow Priest Top 100 — MoP Classic</title>
   <link rel="stylesheet" href="style.css" />
   <script>
     window.whTooltips = { colorLinks: true, iconizeLinks: false, renameLinks: false };
@@ -18,7 +18,7 @@
     </aside>
     
     <main class="content-area">
-      <h1>Shadow Priest Top 100 – MoP Classic</h1>
+      <h1>Shadow Priest Top 100 — MoP Classic</h1>
       <div class="header-controls">
         <div class="last-updated" id="last-updated" role="status" aria-live="polite">
           Loading last updated…
@@ -31,13 +31,15 @@
     
     <aside class="talent-sidebar">
       <div class="talent-summary-container">
-        <button class="collapsible-header" type="button" aria-expanded="false" aria-controls="talent-summary">
+        <button class="collapsible-header" type="button" aria-expanded="true" aria-controls="talent-summary">
           <h3>Popular Talents</h3>
-          <span class="expand-icon">▼</span>
+          <span class="expand-icon rotated">▼</span>
         </button>
-        <div class="collapsible-content" id="talent-summary">
+        <div class="collapsible-content active" id="talent-summary">
           <div class="talent-summary">
-            <!-- Talent data will be populated by JavaScript -->
+            <div style="text-align: center; color: #94a3b8; padding: 2rem; font-style: italic;">
+              Select a boss to view talent data
+            </div>
           </div>
         </div>
       </div>
