--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shadow Priest Cast Analyzer</title>
+    <title>Shadow Priest Analyzer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .icon-alert::before { content: "⚠️"; }
