--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h2>Shadow Priest Rankings</h2>
       </div>
       <div class="nav-menu">
-        <a href="#rankings" class="nav-link">Rankings</a>
-        <a href="#talents" class="nav-link">Talents</a>
+        <a href="https://shadowpriest.netlify.app/app/" class="nav-link">Haste Calculator</a>
+        <a href="https://shadowpriest.netlify.app/public/" class="nav-link">Cast Analyzer</a>
         <button id="copy-link-btn" class="nav-button">Copy Link</button>
       </div>
       <!-- Mobile menu toggle -->
