--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <nav class="sticky-nav">
     <div class="nav-container">
       <div class="nav-brand">
-        <h2>Shadow Priest Rankings</h2>
+        <a href="/" class="nav-link">
+          <h2>Shadow Priest Top 100 — MoP Classic</h2>
+        </a>
       </div>
       <div class="nav-menu">
         <a href="https://shadowpriest.netlify.app/app/" class="nav-link">Haste Calculator</a>
@@ -39,7 +41,6 @@
       </aside>
       
       <main class="content-area">
-        <h1 id="home">Shadow Priest Top 100 — MoP Classic</h1>
         <div class="header-controls">
           <div class="last-updated" id="last-updated" role="status" aria-live="polite">
             Loading last updated…
