--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </aside>
     
     <main class="content-area">
+      <h1>Shadow Priest Top 100</h1>
       <div class="last-updated" id="last-updated" role="status" aria-live="polite">
           Loading last updated…
       </div>
