--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Shadow Priest Top 100 — MoP Classic</title>
+
+  <!-- Security Headers -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://wow.zamimg.com 'unsafe-inline'; img-src 'self' https://assets.rpglogs.com https://www.wowhead.com data:; connect-src 'self' https://www.warcraftlogs.com; style-src 'self' 'unsafe-inline';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+  <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+  
   <link rel="stylesheet" href="style.css" />
   <script>
     window.whTooltips = { colorLinks: true, iconizeLinks: false, renameLinks: false };
