--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     
     <main class="content-area">
       <h1>Shadow Priest Top 100</h1>
+      <div class="header-controls">
+        <button id="refresh-button" class="refresh-button" type="button">
+          <span class="refresh-icon">↻</span>
+          <span class="refresh-text">Refresh Data</span>
+        </button>
+        <div class="refresh-status" id="refresh-status"></div>
+      </div>
       <div class="last-updated" id="last-updated" role="status" aria-live="polite">
           Loading last updated…
       </div>
