--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     window.whTooltips = { colorLinks: true, iconizeLinks: false, renameLinks: false };
   </script>
   <script defer src="https://wow.zamimg.com/widgets/power.js"></script>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698535707794768"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="main-container">
