--- a/index.html
+++ b/index.html
@@ -1,44 +1,45 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shadow Priest Top 100 — MoP Classic</title>
-  
-  <link rel="stylesheet" href="style.css" />
-  <script>
-    window.whTooltips = { colorLinks: true, iconizeLinks: false, renameLinks: false };
-  </script>
-  <script defer src="https://wow.zamimg.com/widgets/power.js"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698535707794768"
-     crossorigin="anonymous"></script>
-</head>
-<body>
-  <div class="main-container">
-    <aside class="sidebar">
-      <nav id="raid-menu" aria-label="Raid selection"></nav>
-      <div id="boss-buttons" role="group" aria-label="Bosses"></div>
-    </aside>
-    
-    <main class="content-area">
-      <h1>Shadow Priest Top 100</h1>
-      <div class="last-updated" id="last-updated" role="status" aria-live="polite">
-          Loading last updated…
+
+<!DOCTYPE html>
+<html lang="en" data-theme="dark">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Shadow Priest Top 100 — MoP Classic</title>
+    https://fonts.googleapis.com
+    https://fonts.gstatic.com
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheetref="pt>
+  </head>
+  <body>
+    <header class="site-header">
+      <div class="brand">
+        <svg class="brand-mark" width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <circle cx="12" cy="12" r="10" stroke="#7c3aed" stroke-width="2" />
+          <path d="M6 12h12" stroke="#6366f1" stroke-width="2" stroke-linecap="round" />
+          <path d="M9 8l3 8 3-8" stroke="#a78bfa" stroke-width="2" stroke-linecap="round" />
+        </svg>
+        <h1>Shadow Priest Top 100</h1>
       </div>
-      <section id="rankings">
+      <p id="last-updated" class="last-updated"></p>
+    </header>
+
+    <main class="main-container">
+      <aside class="sidebar" aria-label="Navigation">
+        <div id="raid-menu" class="raid-menu"></div>
+        <div id="boss-buttons" class="boss-buttons"></div>
+      </aside>
+
+      <section class="content-area" aria-label="Rankings">
+        <div id="rankings" class="rankings"></div>
       </section>
+
+      <aside class="talent-sidebar" aria-label="Popular talents">
+        <h3>Popular Talents</h3>
+        <div class="talent-summary"></div>
+      </aside>
     </main>
-    
-    <aside class="talent-sidebar" id="talents">
-      <h3>Popular Talents</h3>
-      <div class="talent-summary">
-        <div style="text-align: center; color: #94a3b8; padding: 2rem; font-style: italic;">
-          Select a boss to view talent data
-        </div>
-      </div>
-    </aside>
-  </div>
-  
-  <script src="script.js" defer></script>
-</body>
+
+    <footer class="site-footer">
+      <small class="footnote">Built for MoP Classic Logs • Shadow Priest edition</small>
+    </footer>
+  </body>
 </html>
