--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Shadow Priest Top 100 — MoP Classic</title>
-    https://fonts.googleapis.com
-    https://fonts.gstatic.com
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheetref="pt>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="httpsttps://fonts.gstatic.com
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="->
+    style.css
+
+    <!-- Scripts -->
+    script.js</script>
   </head>
   <body>
     <header class="site-header">
       <div class="brand">
-        <svg class="brand-mark" width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <circle cx="12" cy="12" r="10" stroke="#7c3aed" stroke-width="2" />
-          <path d="M6 12h12" stroke="#6366f1" stroke-width="2" stroke-linecap="round" />
-          <path d="M9 8l3 8 3-8" stroke="#a78bfa" stroke-width="2" stroke-linecap="round" />
-        </svg>
         <h1>Shadow Priest Top 100</h1>
       </div>
       <p id="last-updated" class="last-updated"></p>
