--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <nav class="top-nav">
   <div class="nav-container">
-    <div class="nav-logo">SHADOW PRIEST</div>
+    <div class="nav-logo">SHADOW PRIEST MOP CLASSIC</div>
     
     <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
       ☰
@@ -36,7 +36,7 @@
         </a>
       </li>
       <li>
-        <a href="/guide">
+        <a href="https://www.youtube.com/watch?v=LH5aODSFQ1o">
           <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
             <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
@@ -45,7 +45,7 @@
         </a>
       </li>
       <li>
-        <a href="https://youtube.com/@yourchannel" target="_blank" rel="noopener">
+        <a href="http://youtube.com/@skimmynz" target="_blank" rel="noopener">
           <svg class="nav-icon" viewBox="0 0 24 24" fill="currentColor">
             <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
           </svg>
@@ -53,7 +53,7 @@
         </a>
       </li>
       <li>
-        <a href="https://twitch.tv/yourchannel" target="_blank" rel="noopener">
+        <a href="https://twitch.tv/skimmynz" target="_blank" rel="noopener">
           <svg class="nav-icon" viewBox="0 0 24 24" fill="currentColor">
             <path d="M11.571 4.714h1.715v5.143H11.57zm4.715 0H18v5.143h-1.714zM6 0L1.714 4.286v15.428h5.143V24l4.286-4.286h3.428L22.286 12V0zm14.571 11.143l-3.428 3.428h-3.429l-3 3v-3H6.857V1.714h13.714Z"/>
           </svg>
