--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </a>
         </li>
         <li>
-          <a href="/haste-calculator">
+          <a href="/haste">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <circle cx="12" cy="12" r="10"/>
               <polyline points="12 6 12 12 16 14"/>
