--- a/haste.html
+++ b/haste.html
@@ -82,14 +82,13 @@
     .header h1 {
       font-size: clamp(2rem, 4vw, 3rem);
       font-weight: 900;
-      background: var(--gradient-shadow);
+      background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
       margin-bottom: 0.75rem;
       letter-spacing: -0.03em;
       line-height: 1.1;
-      text-shadow: 0 0 30px var(--shadow-glow);
     }
 
     .header p {
@@ -146,7 +145,7 @@
       left: 0;
       right: 0;
       height: 2px;
-      background: var(--gradient-shadow);
+      background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
       opacity: 0.8;
     }
 
@@ -194,7 +193,7 @@
     }
 
     .toggle-btn.active {
-      background: var(--gradient-shadow);
+      background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
       color: white;
       box-shadow: 0 8px 25px var(--shadow-glow), 0 4px 12px rgba(107, 70, 193, 0.4);
       transform: translateY(-1px);
@@ -319,7 +318,7 @@
     }
     
     .race-checkbox:checked + .race-switch::before {
-      background: var(--gradient-shadow);
+      background: var(linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%));
       box-shadow: 0 0 20px var(--shadow-glow);
     }
     
