--- a/haste.html
+++ b/haste.html
@@ -318,7 +318,7 @@
     }
     
     .race-checkbox:checked + .race-switch::before {
-      background: var(linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%));
+      background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
       box-shadow: 0 0 20px var(--shadow-glow);
     }
     
@@ -356,13 +356,12 @@
     .result-value {
       font-size: 2.5rem;
       font-weight: 900;
-      background: var(--gradient-shadow);
+      background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
       margin-bottom: 0.75rem;
       line-height: 1;
-      text-shadow: 0 0 30px var(--shadow-glow);
     }
 
     .conversion-text {
@@ -413,7 +412,7 @@
       left: 0;
       right: 0;
       height: 2px;
-      background: var(--gradient-shadow);
+      background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
       opacity: 0.8;
     }
 
@@ -430,7 +429,7 @@
       color: var(--text-primary);
       text-align: center;
       letter-spacing: -0.02em;
-      background: var(--gradient-shadow);
+      background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
@@ -462,7 +461,7 @@
       top: 0;
       bottom: 0;
       width: 0;
-      background: var(--gradient-shadow);
+      background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
 
@@ -573,7 +572,7 @@
     .progress-container {
       width: 140px;
       height: 10px;
-      background: var(--border-color);
+      background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
       border-radius: 5px;
       overflow: hidden;
       position: relative;
@@ -705,7 +704,7 @@
     }
 
     ::-webkit-scrollbar-thumb {
-      background: var(--gradient-shadow);
+      background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 100%);
       border-radius: 4px;
     }
 
