--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       
       <ul class="nav-links" id="navLinks">
         <li>
-          <a href="/" class="active">
+          <a href="/">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
               <polyline points="9 22 9 12 15 12 15 22"/>
@@ -54,6 +54,15 @@
               <polyline points="12 6 12 12 16 14"/>
             </svg>
             Haste Calculator
+          </a>
+        </li>
+        <li>
+          <a href="/addons" class="active">
+            <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+              <line x1="9" y1="3" x2="9" y2="21"/>
+            </svg>
+            Addons & WAs
           </a>
         </li>
         <li>
