--- a/addons.html
+++ b/addons.html
@@ -355,7 +355,7 @@
   <div class="addons-container">
     <div class="page-header">
       <h1>ADDONS & WEAKAURAS</h1>
-      <div class="subtitle">Last Updated: 5th January 2026</div>
+      <div class="subtitle">Complete Shadow Priest UI Setup for MoP Classic</div>
       
       <div class="ui-settings">
         <div class="ui-setting">
@@ -385,6 +385,28 @@
     
     <div class="items-grid" id="weakauras-grid"></div>
 
+    <!-- FAQ Section -->
+    <div class="faq-section">
+      <h2>Need Help?</h2>
+      <div class="faq-links">
+        <a href="http://youtube.com/@skimmynz" target="_blank" rel="noopener" class="faq-link">
+          <svg viewBox="0 0 24 24" fill="currentColor">
+            <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+          </svg>
+          YouTube Guides
+        </a>
+        <a href="https://twitch.tv/skimmynz" target="_blank" rel="noopener" class="faq-link">
+          <svg viewBox="0 0 24 24" fill="currentColor">
+            <path d="M11.571 4.714h1.715v5.143H11.57zm4.715 0H18v5.143h-1.714zM6 0L1.714 4.286v15.428h5.143V24l4.286-4.286h3.428L22.286 12V0zm14.571 11.143l-3.428 3.428h-3.429l-3 3v-3H6.857V1.714h13.714Z"/>
+          </svg>
+          Ask on Twitch
+        </a>
+      </div>
+    </div>
+
+    <div class="last-updated-footer">
+      Last updated: 1st Jan 2026
+    </div>
   </div>
 
   <script>
@@ -408,20 +430,20 @@
     ];
 
     const weakauras = [
-      { name: "Fojji - Shadow Priest UI [MoP] | skimmy edit", url: "https://wago.io/ri2lfOS8b", description: "Complete UI package", preview: "https://media.wago.io/screenshots/ri2lfOS8b/675ae4e3d535cb06abeaa1ea.gif" },
-      { name: "DragonKarsh CastBars | skimmy edit", url: "https://wago.io/dnDdk1mhh", description: "Enhanced cast bars", preview: "https://media.wago.io/screenshots/dnDdk1mhh/675aede6d535cb06abeb2e0d.gif" },
-      { name: "Shadow Priest Fake Queue", url: "https://wago.io/Ikku0mWwO", description: "Queue simulation overlay", preview: "https://media.wago.io/screenshots/Ikku0mWwO/675aee4bd535cb06abeb364a.png" },
-      { name: "DragonKarsh Mind Flay Clip Delay", url: "https://wago.io/zqC8i_vfS", description: "Mind Flay optimization", preview: "https://media.wago.io/screenshots/zqC8i_vfS/675aee5ed535cb06abeb38dd.gif" },
-      { name: "Fojji - Boss Kill Times", url: "https://wago.io/FojjiBossKillTimes", description: "Track boss kill timers", preview: "https://media.wago.io/screenshots/FojjiBossKillTimes/675aeea5d535cb06abeb44f4.png" },
-      { name: "Fojji - Class Pack Anchors", url: "https://wago.io/FojjiClassAnchors", description: "Position UI elements", preview: "https://media.wago.io/screenshots/FojjiClassAnchors/675aeedcd535cb06abeb4d73.png" },
-      { name: "Fojji - Item & Trinket Tracker", url: "https://wago.io/us-DiWYP7", description: "Track trinket cooldowns", preview: "https://media.wago.io/screenshots/us-DiWYP7/675aef0bd535cb06abeb5373.gif" },
-      { name: "Fojji - Pull Timers & Range Radar", url: "https://wago.io/Fojji_PullTimers", description: "Pull countdown and range", preview: "https://media.wago.io/screenshots/Fojji_PullTimers/675aef2bd535cb06abeb5953.gif" },
-      { name: "Shadow Word: Death on Nameplates", url: "https://wago.io/UWa_HeEta", description: "Execute range indicator", preview: "https://media.wago.io/screenshots/UWa_HeEta/675aef76d535cb06abeb6b63.gif" },
-      { name: "Halo Range Checker", url: "https://wago.io/Zcbxhfgrl", description: "Optimal Halo range", preview: "https://media.wago.io/screenshots/Zcbxhfgrl/675aef90d535cb06abeb70c8.gif" },
-      { name: "Auto Accept Role Check Sign Up", url: "https://wago.io/0PSqIgG2d", description: "Auto-accept LFG roles", preview: "https://media.wago.io/screenshots/0PSqIgG2d/675aefaed535cb06abeb765c.png" },
-      { name: "ModernCharacterFrame | Plaffs edition", url: "https://wago.io/mm6cuMmYc", description: "Updated character pane", preview: "https://media.wago.io/screenshots/mm6cuMmYc/675aefc3d535cb06abeb7b73.png" },
-      { name: "Shadow Priest Haste Breakpoints T14", url: "https://wago.io/7m5gdIAts", description: "Haste breakpoint tracker", preview: "https://media.wago.io/screenshots/7m5gdIAts/675aefdcd535cb06abeb8123.png" },
-      { name: "UVLS Tracker", url: "https://wago.io/8Xgm0DEZW", description: "Track UVLS trinket stacks", preview: "https://media.wago.io/screenshots/8Xgm0DEZW/675aeff2d535cb06abeb8619.png" }
+      { name: "Fojji - Shadow Priest UI [MoP] | skimmy edit", url: "https://wago.io/ri2lfOS8b", description: "Complete UI package", preview: "https://media.wago.io/screenshots/ri2lfOS8b/688dc81ab1debd7388acf2da.gif" },
+      { name: "DragonKarsh CastBars | skimmy edit", url: "https://wago.io/dnDdk1mhh", description: "Enhanced cast bars", preview: "" },
+      { name: "Shadow Priest Fake Queue", url: "https://wago.io/Ikku0mWwO", description: "Queue simulation overlay", preview: "" },
+      { name: "DragonKarsh Mind Flay Clip Delay", url: "https://wago.io/zqC8i_vfS", description: "Mind Flay optimization", preview: "" },
+      { name: "Fojji - Boss Kill Times", url: "https://wago.io/FojjiBossKillTimes", description: "Track boss kill timers", preview: "" },
+      { name: "Fojji - Class Pack Anchors", url: "https://wago.io/FojjiClassAnchors", description: "Position UI elements", preview: "" },
+      { name: "Fojji - Item & Trinket Tracker", url: "https://wago.io/us-DiWYP7", description: "Track trinket cooldowns", preview: "" },
+      { name: "Fojji - Pull Timers & Range Radar", url: "https://wago.io/Fojji_PullTimers", description: "Pull countdown and range", preview: "" },
+      { name: "Shadow Word: Death on Nameplates", url: "https://wago.io/UWa_HeEta", description: "Execute range indicator", preview: "" },
+      { name: "Halo Range Checker", url: "https://wago.io/Zcbxhfgrl", description: "Optimal Halo range", preview: "" },
+      { name: "Auto Accept Role Check Sign Up", url: "https://wago.io/0PSqIgG2d", description: "Auto-accept LFG roles", preview: "" },
+      { name: "ModernCharacterFrame | Plaffs edition", url: "https://wago.io/mm6cuMmYc", description: "Updated character pane", preview: "" },
+      { name: "Shadow Priest Haste Breakpoints T14", url: "https://wago.io/7m5gdIAts", description: "Haste breakpoint tracker", preview: "" },
+      { name: "UVLS Tracker", url: "https://wago.io/8Xgm0DEZW", description: "Track UVLS trinket stacks", preview: "" }
     ];
 
     // Render items
