--- a/addons.html
+++ b/addons.html
@@ -348,7 +348,7 @@
   <div class="addons-container">
     <div class="page-header">
       <h1>ADDONS & WEAKAURAS</h1>
-      <div class="subtitle">Complete Shadow Priest UI Setup for MoP Classic</div>
+      <div class="subtitle">Last updated: 5th January 2026</div>
       
       <div class="ui-settings">
         <div class="ui-setting">
