--- a/addons.html
+++ b/addons.html
@@ -409,7 +409,7 @@
       { name: "Fojji - Pull Timers & Range Radar", url: "https://wago.io/Fojji_PullTimers", preview: "" },
       { name: "Shadow Word: Death on Nameplates", url: "https://wago.io/UWa_HeEta", preview: "https://media.wago.io/screenshots/UWa_HeEta/68846df1a40570447822e19e.gif" },
       { name: "Halo Range Checker", url: "https://wago.io/Zcbxhfgrl", preview: "https://media.wago.io/screenshots/Zcbxhfgrl/683b19f81cf76ccd508485fe.png" },
-      { name: "Auto Accept Role Check Sign Up", url: "https://wago.io/0PSqIgG2d", preview: "https://media.wago.io/screenshots/0PSqIgG2d/611836f4f3c4235c1209eba1.png" },
+      { name: "Auto Accept Role Check Sign Up", url: "https://wago.io/0PSqIgG2d", preview: "" },
       { name: "ModernCharacterFrame | Plaffs edition", url: "https://wago.io/mm6cuMmYc", preview: "https://media.wago.io/screenshots/mm6cuMmYc/665f6b5f9fda7c214b8d976d.png" },
       { name: "Shadow Priest Haste Breakpoints T14", url: "https://wago.io/7m5gdIAts", preview: "https://media.wago.io/screenshots/7m5gdIAts/68c93ea45c24f25b2318eee9.gif" },
       { name: "UVLS Tracker", url: "https://wago.io/8Xgm0DEZW", preview: "https://media.wago.io/screenshots/8Xgm0DEZW/6957a8af80c45a851e6499b2.gif" }
