--- a/addons.html
+++ b/addons.html
@@ -388,11 +388,11 @@
       { name: "FojjiCore", url: "https://www.curseforge.com/wow/addons/fojjicore" },
       { name: "Leatrix Plus", url: "https://www.curseforge.com/wow/addons/leatrix-plus" },
       { name: "OmniCC", url: "https://www.curseforge.com/wow/addons/omni-cc" },
-      { name: "Plater Nameplates", url: "https://www.curseforge.com/wow/addons/plater-nameplates", profileUrl: "https://wago.io/pfxpBonVW" },
+      { name: "Plater Nameplates", url: "https://www.curseforge.com/wow/addons/plater-nameplates", profileUrl: "https://wago.io/pfxpBonVW", preview: "https://media.wago.io/screenshots/pfxpBonVW/674874e2db2a2863b9d60ecd.png" },
       { name: "Questie", url: "https://www.curseforge.com/wow/addons/questie" },
       { name: "RCLootCouncil Classic", url: "https://www.curseforge.com/wow/addons/rclootcouncil-classic" },
       { name: "ReforgeLite Classic", url: "https://www.curseforge.com/wow/addons/reforgelite-classic" },
-      { name: "Shadowed Unit Frames", url: "https://www.curseforge.com/wow/addons/shadowed-unit-frames/files/7062045", profileUrl: "https://wago.io/3K-eb06qt" },
+      { name: "Shadowed Unit Frames", url: "https://www.curseforge.com/wow/addons/shadowed-unit-frames/files/7062045", profileUrl: "https://wago.io/3K-eb06qt", preview: "https://media.wago.io/screenshots/3K-eb06qt/688e04f139d99bcfd0194af7.gif"},
       { name: "TrufiGCD", url: "https://www.curseforge.com/wow/addons/trufigcd" },
       { name: "WeakAuras 2", url: "https://www.curseforge.com/wow/addons/weakauras-2" },
       { name: "WowSimsExporter", url: "https://www.curseforge.com/wow/addons/wowsimsexporter" }
