--- a/addons.html
+++ b/addons.html
@@ -112,6 +112,8 @@
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       position: relative;
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
     }
 
     .item-card::before {
@@ -141,6 +143,7 @@
       color: var(--text-primary);
       margin-bottom: 0.75rem;
       line-height: 1.3;
+      min-height: 2.6rem;
     }
 
     .item-preview {
@@ -158,10 +161,31 @@
       transform: scale(1.02);
     }
 
+    .item-preview-placeholder {
+      width: 100%;
+      height: 160px;
+      border-radius: 8px;
+      margin-bottom: 1rem;
+      border: 1px solid var(--border-color);
+      background: linear-gradient(135deg, rgba(124, 58, 237, 0.1) 0%, rgba(167, 139, 250, 0.1) 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--text-muted);
+      font-size: 0.875rem;
+    }
+
+    .item-preview-placeholder svg {
+      width: 48px;
+      height: 48px;
+      opacity: 0.3;
+    }
+
     .item-links {
       display: flex;
       gap: 0.5rem;
       flex-wrap: wrap;
+      margin-top: auto;
     }
 
     .item-link {
@@ -422,7 +446,15 @@
       
       container.innerHTML = items.map(item => `
         <div class="item-card">
-          ${item.preview ? `<img src="${item.preview}" alt="${item.name} preview" class="item-preview" loading="lazy" onerror="this.style.display='none'">` : ''}
+          ${item.preview ? 
+            `<img src="${item.preview}" alt="${item.name} preview" class="item-preview" loading="lazy" onerror="this.style.display='none'">` : 
+            `<div class="item-preview-placeholder">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                <line x1="9" y1="3" x2="9" y2="21"/>
+              </svg>
+            </div>`
+          }
           <div class="item-name">${item.name}</div>
           <div class="item-links">
             <a href="${item.url}" target="_blank" rel="noopener" class="item-link">
