--- a/addons.html
+++ b/addons.html
@@ -36,11 +36,12 @@
       text-transform: uppercase;
     }
 
-    .page-header .subtitle {
+    .page-header .last-updated {
       color: var(--text-muted);
-      font-size: 0.875rem;
-      margin-bottom: 2rem;
+      font-size: 0.8125rem;
       font-weight: 400;
+      text-align: center;
+      margin-bottom: 1.5rem;
     }
 
     .ui-settings {
@@ -341,7 +342,9 @@
     <div class="addons-container">
       <div class="page-header">
         <h1>ADDONS & WEAKAURAS</h1>
-        <div class="subtitle">Last updated: 5th January 2026</div>
+        <div class="last-updated" id="last-updated">
+          Last updated: 5th January 2026
+        </div>
         
         <div class="ui-settings">
           <div class="ui-setting">
