--- a/addons.html
+++ b/addons.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-adsense-account" content="ca-pub-5698535707794768">
   <title>Shadow Priest Addons & WeakAuras – MoP Classic</title>
   
   <link rel="icon" type="image/png" sizes="32x32" href="/32.png">
